# HabitSync

./: README.md  pyproject.toml  pytest.ini
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: test_models.py  test_views.py
users/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_tg_chat_id.py
users/tests/: test_models.py  test_views.py  tests.py
