[project]
name = "habitsync"
version = "0.1.0"
description = ""
authors = [
    {name = "dima",email = "dmitrij-bezgubov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-celery-beat (>=2.8.0,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "ipython (>=9.1.0,<10.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
